<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColourIdentifier</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="flash_off">Flash: Off</string>
    <string name="flash_on">Flash: On</string>
    <string name="refresh_rate">Refresh Rate</string>
    <string name="fivesecs">5 Seconds</string>
    <string name="onesec">1 Second</string>
    <string name="manual">Manual Refresh Only</string>
    <string name="threesecs">3 Seconds</string>
    <string name="twosecs">2 Seconds</string>
    <string name="refresh">Refresh Button</string>
    <string name="clearLog">Clear Log</string>

</resources>
