<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/refresh_menu"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/refresh_rate">
        <menu>
            <item android:id="@+id/onesec"
                  android:title="@string/onesec" />
            <item android:id="@+id/twosecs"
                  android:title="@string/twosecs" />
            <item android:id="@+id/threesecs"
                  android:title="@string/threesecs" />
            <item android:id="@+id/fivesecs"
                  android:title="@string/fivesecs" />
            <item android:id="@+id/manual"
                  android:title="@string/manual" />
        </menu>
    </item>
    <item
        android:id="@+id/clearLog"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/clearLog">
    </item>
</menu>