<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<SurfaceView 
	   android:id="@+id/cameraSurfaceView" android:layout_width="match_parent"
	   android:layout_height="match_parent">
	</SurfaceView>
	<RelativeLayout
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
	    >

		<ZoomControls
		    android:id="@+id/zoomControls"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentRight="true" />

		<ToggleButton
		    android:id="@+id/button1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentLeft="true"
		    android:textOff="@string/flash_off"
		    android:textOn="@string/flash_on" />

		<ImageButton
		    android:id="@+id/refreshButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_toRightOf="@id/button1"
		    android:background="@android:drawable/btn_default"
		    android:contentDescription="@string/refresh"
		    android:src="@android:drawable/stat_notify_sync" />

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:layout_alignParentTop="true"
		    android:background="#30FFFF00">
			    <TextView
			        android:id="@+id/colourText"
			        android:layout_width="0dp"
			        android:layout_height = "match_parent"
			        android:layout_weight="4"
			        style="@style/colourTextShadow"
			        android:gravity="center"/>
				<Chu.Peter.colouridentifier.ColourBox
				    android:id="@+id/colourBox"
				    android:layout_width="0dp"
				    android:layout_height="match_parent"
				    android:layout_marginLeft="5dp"
				    android:layout_marginRight="5dp"
				    android:layout_weight="1"
				    android:paddingRight="5dp" />
		</LinearLayout>
	</RelativeLayout>
</FrameLayout>
